gcp-prod/gateway/manifests/istio/addons/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toptal
  labels:
    istio-injection: enabled
